Project LogiTrans {
  database_type: 'PostgreSQL'
}

Enum USER_ROLE {
  CLIENTE
  AGENTE_OPERATIVO
  AGENTE_LOGISTICO
  ENCARGADO_PATIO
  PILOTO
  AGENTE_FINANCIERO
  GERENCIA
  CERTIFICADOR_FEL
}

Enum RISK_LEVEL {
  BAJO
  MEDIO
  ALTO
  CRITICO
}

Enum COUNTRY_CODE {
  GT
  SV
  HN
}

Enum CURRENCY_CODE {
  USD
  GTQ
  HNL
}

Enum CONTRACT_STATUS {
  BORRADOR
  PENDIENTE
  VIGENTE
  VENCIDO
  RECHAZADO
  CANCELADO
}

Enum ORDER_STATUS {
  REGISTRADA
  ASIGNADA
  LISTA_PARA_DESPACHO
  EN_TRANSITO
  ENTREGADA
  BLOQUEADA
  CANCELADA
}

Enum ROUTE_EVENT_TYPE {
  SALIDA
  PUNTO_CONTROL
  ADUANA
  INCIDENTE
  LLEGADA
  OTRO
}

Enum INVOICE_STATUS {
  BORRADOR
  CERTIFICADA
  ENVIADA
  PAGADA
  RECHAZADA
}

Enum PAYMENT_METHOD {
  TRANSFERENCIA
  CHEQUE
}

Enum PAYMENT_STATUS {
  PENDIENTE
  APROBADO
  RECHAZADO
}

Table CLIENTS {
  CLIENT_ID int [pk, increment]
  CLIENT_CODE varchar(30) [not null, unique]
  LEGAL_NAME varchar(180) [not null]
  NIT varchar(20) [not null, unique]
  TAX_ADDRESS text [not null]
  PRIMARY_CONTACT_NAME varchar(160) [not null]
  PRIMARY_CONTACT_EMAIL varchar(320) [not null]
  PRIMARY_CONTACT_PHONE varchar(30)
  COUNTRY_CODE COUNTRY_CODE [not null, default: 'GT']
  CURRENCY_CODE CURRENCY_CODE [not null, default: 'GTQ']
  TAX_RATE numeric(5,4) [not null, default: 0.1200]
  PAYMENT_RISK RISK_LEVEL [not null, default: 'MEDIO']
  CUSTOMS_RISK RISK_LEVEL [not null, default: 'MEDIO']
  CARGO_RISK RISK_LEVEL [not null, default: 'MEDIO']
  AML_RISK RISK_LEVEL [not null, default: 'MEDIO']
  IS_BLOCKED boolean [not null, default: false]
  BLOCK_REASON text
}

Table EXCHANGE_RATES {
  CURRENCY_CODE CURRENCY_CODE [pk]
  RATE_FROM_USD numeric(14,6) [not null]
  SOURCE varchar(50) [not null, default: 'MANUAL']
  UPDATED_AT timestamptz [not null]
}

Table USERS {
  USER_ID int [pk, increment]
  CLIENT_ID int
  ROLE USER_ROLE [not null]
  FULL_NAME varchar(160) [not null]
  EMAIL varchar(320) [not null, unique]
  PASSWORD_HASH text [not null]
  PHONE varchar(30)
  IS_ACTIVE boolean [not null, default: true]
}

Table USER_SESSIONS {
  SESSION_ID int [pk, increment]
  USER_ID int [not null]
  USER_REMOTE inet
  USER_AGENT varchar(255)
  USER_UUID varchar(36) [not null]
  SESSION_UUID varchar(36) [not null, unique]
  SESSION_TOKEN text [not null, unique]
  SESSION_SOURCE varchar(80) [not null]
  USAGE_COUNT integer [not null, default: 0]
  LAST_USED_AT timestamptz
  EXPIRATION_AT timestamptz [not null]
  DELETED_AT timestamptz
  CREATED_AT timestamptz [not null]
  UPDATED_AT timestamptz [not null]
}

Table PASSWORD_RECOVERY_TOKENS {
  TOKEN_ID int [pk, increment]
  USER_ID int [not null]
  TOKEN_HASH text [not null, unique]
  EXPIRES_AT timestamptz [not null]
  USED_AT timestamptz
}

Table CLIENT_CONTACTS {
  CONTACT_ID int [pk, increment]
  CLIENT_ID int [not null]
  CONTACT_NAME varchar(160) [not null]
  CONTACT_EMAIL varchar(320) [not null]
  CONTACT_PHONE varchar(30)
  POSITION_TITLE varchar(100)
  IS_ACTIVE boolean [not null, default: true]

  Indexes {
    (CLIENT_ID, CONTACT_EMAIL) [unique]
  }
}



Table BRANCHES {
  BRANCH_ID int [pk, increment]
  BRANCH_CODE varchar(20) [not null, unique]
  BRANCH_NAME varchar(100) [not null, unique]
  CITY varchar(100) [not null]
  COUNTRY varchar(100) [not null]
  IS_ACTIVE boolean [not null, default: true]
}

Table ROUTES {
  ROUTE_ID int [pk, increment]
  ROUTE_CODE varchar(30) [not null, unique]
  ORIGIN varchar(120) [not null]
  DESTINATION varchar(120) [not null]
  DISTANCE_KM numeric(10,2) [not null]
  ESTIMATED_HOURS numeric(10,2) [not null]
  IS_INTERNATIONAL boolean [not null, default: false]
  IS_ACTIVE boolean [not null, default: true]
}

Table VEHICLE_TYPES {
  VEHICLE_TYPE_ID int [pk, increment]
  TYPE_CODE varchar(20) [not null, unique]
  TYPE_NAME varchar(100) [not null, unique]
  MIN_CAPACITY_TON numeric(6,2) [not null]
  MAX_CAPACITY_TON numeric(6,2)
  RATE_PER_KM numeric(12,2) [not null]
}

Table CARGO_TYPES {
  CARGO_TYPE_ID int [pk, increment]
  CARGO_NAME varchar(100) [not null, unique]
  REQUIRES_REFRIGERATION boolean [not null, default: false]
}

Table CONTRACTS {
  CONTRACT_ID int [pk, increment]
  CONTRACT_NUMBER varchar(40) [not null, unique]
  CLIENT_ID int [not null]
  STATUS CONTRACT_STATUS [not null, default: 'BORRADOR']
  START_DATE date [not null, default: `CURRENT_DATE`]
  END_DATE date [not null]
  ACCEPTED_AT timestamptz
  CREDIT_LIMIT numeric(14,2) [not null]
  CURRENCY_CODE CURRENCY_CODE [not null, default: 'GTQ']
  EXCHANGE_RATE_FROM_USD numeric(14,6) [not null, default: 1.000000]
  TAX_RATE numeric(5,4) [not null, default: 0.1200]
  PAYMENT_TERM_DAYS smallint [not null]
  DISCOUNT_PERCENTAGE numeric(5,2) [not null, default: 0]
  NOTES text
}

Table CONTRACT_ROUTES {
  CONTRACT_ROUTE_ID int [pk, increment]
  CONTRACT_ID int [not null]
  ROUTE_ID int [not null]
  PROMISED_DELIVERY_HOURS numeric(10,2) [not null]

  Indexes {
    (CONTRACT_ID, ROUTE_ID) [unique]
    (CONTRACT_ROUTE_ID, CONTRACT_ID) [unique]
  }
}

Table CONTRACT_CARGO_TYPES {
  CONTRACT_ID int [not null]
  CARGO_TYPE_ID int [not null]

  Indexes {
    (CONTRACT_ID, CARGO_TYPE_ID) [pk]
  }
}

Table CONTRACT_RATES {
  CONTRACT_RATE_ID int [pk, increment]
  CONTRACT_ID int [not null]
  VEHICLE_TYPE_ID int [not null]
  BASE_RATE_PER_KM numeric(12,2) [not null]
  DISCOUNT_PERCENTAGE numeric(5,2) [not null, default: 0]
  FINAL_RATE_PER_KM numeric(12,2) [not null]

  Indexes {
    (CONTRACT_ID, VEHICLE_TYPE_ID) [unique]
    (CONTRACT_RATE_ID, CONTRACT_ID) [unique]
  }
}

Table TRANSPORT_UNITS {
  UNIT_ID int [pk, increment]
  BRANCH_ID int [not null]
  VEHICLE_TYPE_ID int [not null]
  PILOT_USER_ID int [unique]
  PLATE_NUMBER varchar(20) [not null, unique]
  VEHICLE_MODEL varchar(80)
  CAPACITY_TON numeric(6,2) [not null]
  HAS_REFRIGERATION boolean [not null, default: false]
  PILOT_LICENSE_NUMBER varchar(40) [not null, unique]
  PILOT_LICENSE_EXPIRATION date [not null]
  VEHICLE_DOCUMENT_EXPIRATION date [not null]
  IS_ACTIVE boolean [not null, default: true]
}

Table ORDERS {
  ORDER_ID int [pk, increment]
  ORDER_NUMBER varchar(40) [not null, unique]
  CONTRACT_ID int [not null]
  REQUESTED_BY_USER_ID int [not null]
  BRANCH_ID int
  CONTRACT_ROUTE_ID int
  CONTRACT_RATE_ID int
  CARGO_TYPE_ID int [not null]
  UNIT_ID int
  STATUS ORDER_STATUS [not null, default: 'REGISTRADA']
  CARGO_DESCRIPTION text [not null, default: 'PENDIENTE_DETALLE']
  DECLARED_WEIGHT_TON numeric(8,2) [not null]
  LOADED_WEIGHT_TON numeric(8,2)
  ORIGIN text
  DESTINATION text
  PICKUP_ADDRESS text [not null]
  DELIVERY_ADDRESS text [not null]
  REQUESTED_AT timestamptz [not null]
  SCHEDULED_PICKUP_AT timestamptz
  PROMISED_DELIVERY_AT timestamptz
  DISPATCHED_AT timestamptz
  DELIVERED_AT timestamptz
  STOWAGE_CONFIRMED boolean
  IS_SEALED boolean
  RECEIVER_NAME varchar(160)
  RECEIVER_SIGNATURE_PATH text
  DELIVERY_EVIDENCE_PATH text
  DISTANCE_KM numeric(10,2) [not null, default: 0]
  BASE_RATE_PER_KM numeric(12,2) [not null, default: 0]
  DISCOUNT_PERCENTAGE numeric(5,2) [not null, default: 0]
  FINAL_RATE_PER_KM numeric(12,2) [not null, default: 0]
  CURRENCY_CODE CURRENCY_CODE [not null, default: 'GTQ']
  EXCHANGE_RATE_FROM_USD numeric(14,6) [not null, default: 1.000000]
  TAX_RATE numeric(5,4) [not null, default: 0.1200]
  SUBTOTAL_AMOUNT numeric(14,2) [not null, default: 0]
  TAX_AMOUNT numeric(14,2) [not null, default: 0]
  TOTAL_AMOUNT numeric(14,2) [not null, default: 0]
  FUEL_COST numeric(14,2) [not null, default: 0]
  VIATICS_COST numeric(14,2) [not null, default: 0]
  MAINTENANCE_COST numeric(14,2) [not null, default: 0]
  NOTES text
}

Table ORDER_ROUTE_LOGS {
  LOG_ID int [pk, increment]
  ORDER_ID int [not null]
  EVENT_TYPE ROUTE_EVENT_TYPE [not null]
  EVENT_TIME timestamptz [not null]
  DESCRIPTION text [not null]
}

Table INVOICES {
  INVOICE_ID int [pk, increment]
  INVOICE_NUMBER varchar(40) [not null, unique]
  ORDER_ID int [not null, unique, note: 'Se genera automaticamente como borrador cuando la orden cambia a ENTREGADA']
  CLIENT_ID int [not null]
  STATUS INVOICE_STATUS [not null, default: 'BORRADOR']
  ISSUE_DATE timestamptz [not null]
  CERTIFIED_AT timestamptz
  DUE_DATE date [not null]
  SENT_AT timestamptz
  CLIENT_NAME varchar(180) [not null]
  CLIENT_NIT varchar(20) [not null]
  CLIENT_ADDRESS text [not null]
  SERVICE_DESCRIPTION text [not null]
  CURRENCY_CODE CURRENCY_CODE [not null, default: 'GTQ']
  EXCHANGE_RATE_FROM_USD numeric(14,6) [not null, default: 1.000000]
  TAX_RATE numeric(5,4) [not null, default: 0.1200]
  SUBTOTAL_AMOUNT numeric(14,2) [not null]
  TAX_AMOUNT numeric(14,2) [not null]
  TOTAL_AMOUNT numeric(14,2) [not null]
  FEL_UUID varchar(50) [unique]
  PDF_PATH text
}

Table PAYMENTS {
  PAYMENT_ID int [pk, increment]
  INVOICE_ID int [not null]
  METHOD PAYMENT_METHOD [not null]
  STATUS PAYMENT_STATUS [not null, default: 'PENDIENTE']
  SUPPORT_DOCUMENT_PATH text
  CURRENCY_CODE CURRENCY_CODE [not null, default: 'GTQ']
  AMOUNT numeric(14,2) [not null]
  PAYMENT_DATE timestamptz [not null]
  REVIEWED_BY_USER_ID int
}

Ref: USERS.CLIENT_ID > CLIENTS.CLIENT_ID
Ref: USER_SESSIONS.USER_ID > USERS.USER_ID
Ref: PASSWORD_RECOVERY_TOKENS.USER_ID > USERS.USER_ID
Ref: CLIENT_CONTACTS.CLIENT_ID > CLIENTS.CLIENT_ID
Ref: CONTRACTS.CLIENT_ID > CLIENTS.CLIENT_ID
Ref: CONTRACT_ROUTES.CONTRACT_ID > CONTRACTS.CONTRACT_ID
Ref: CONTRACT_ROUTES.ROUTE_ID > ROUTES.ROUTE_ID
Ref: CONTRACT_CARGO_TYPES.CONTRACT_ID > CONTRACTS.CONTRACT_ID
Ref: CONTRACT_CARGO_TYPES.CARGO_TYPE_ID > CARGO_TYPES.CARGO_TYPE_ID
Ref: CONTRACT_RATES.CONTRACT_ID > CONTRACTS.CONTRACT_ID
Ref: CONTRACT_RATES.VEHICLE_TYPE_ID > VEHICLE_TYPES.VEHICLE_TYPE_ID
Ref: TRANSPORT_UNITS.BRANCH_ID > BRANCHES.BRANCH_ID
Ref: TRANSPORT_UNITS.VEHICLE_TYPE_ID > VEHICLE_TYPES.VEHICLE_TYPE_ID
Ref: TRANSPORT_UNITS.PILOT_USER_ID > USERS.USER_ID
Ref: ORDERS.CONTRACT_ID > CONTRACTS.CONTRACT_ID
Ref: ORDERS.REQUESTED_BY_USER_ID > USERS.USER_ID
Ref: ORDERS.BRANCH_ID > BRANCHES.BRANCH_ID
Ref: ORDERS.CONTRACT_ROUTE_ID > CONTRACT_ROUTES.CONTRACT_ROUTE_ID
Ref: ORDERS.CONTRACT_RATE_ID > CONTRACT_RATES.CONTRACT_RATE_ID
Ref: ORDERS.CARGO_TYPE_ID > CARGO_TYPES.CARGO_TYPE_ID
Ref: ORDERS.UNIT_ID > TRANSPORT_UNITS.UNIT_ID
Ref: ORDER_ROUTE_LOGS.ORDER_ID > ORDERS.ORDER_ID
Ref: INVOICES.ORDER_ID > ORDERS.ORDER_ID
Ref: INVOICES.CLIENT_ID > CLIENTS.CLIENT_ID
Ref: PAYMENTS.INVOICE_ID > INVOICES.INVOICE_ID
Ref: PAYMENTS.REVIEWED_BY_USER_ID > USERS.USER_ID